# heyclaude

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
codriver/: bot.py  brain.py  cli.py  codriver.sb  commands.py  config.py  tts.py
codriver/data/: workspace_CLAUDE.md
heyclaude/: bot.py  brain.py  cli.py  config.py  heyclaude.sb  runtime.py  stt.py  tts.py
heyclaude/data/: workspace_CLAUDE.md
tests/: test_brain.py  test_cli.py  test_commands.py  test_config.py  test_tts.py
