[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heyclaude"
version = "0.1.0"
description = "Give Claude Code a voice — talk to it hands-free over Telegram voice notes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "diamonddime" }]
keywords = [
    "claude",
    "claude-code",
    "telegram",
    "voice",
    "speech-to-text",
    "text-to-speech",
    "whisper",
    "elevenlabs",
    "driving",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development",
]
dependencies = [
    "python-telegram-bot>=21",
    "faster-whisper>=1.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
# Local neural voice (Kokoro via kokoro-onnx). Free + offline, no quota. The
# ONNX vocoder is stable (mlx-audio has an istft length bug on longer replies).
# Install with:  pip install 'heyclaude[kokoro]'
# then fetch the model files:  heyclaude download-voice
# Phonemization uses espeak-ng — the bundled espeakng-loader covers it, or
# `brew install espeak-ng` for the system library.
kokoro = [
    "kokoro-onnx",
    "soundfile",
    "espeakng-loader",
]

[project.urls]
Homepage = "https://github.com/diamonddime/heyclaude"
Repository = "https://github.com/diamonddime/heyclaude"
Issues = "https://github.com/diamonddime/heyclaude/issues"

[project.scripts]
heyclaude = "heyclaude.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["heyclaude"]
# Non-Python files under the package (the seeded workspace CLAUDE.md) are
# included automatically by hatchling — no force-include needed.
